feat: user scheduler and log history view